feat: update security config add more to build.gradle